src/test/deca/syntax/invalid/class/null_type_not_permitted2.deca
// Description:
// 	  Testing the contextual error associated with a void parameter inside a signature method
//
// Resultats:
// 	Syntax Error
//  line 8
{
    null b;
}